--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,26 +13,25 @@ services:
     ports:
       - "5433:5432"
 
-  # app:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile
-  #     target: ${NODE_ENV:-development} # Build for development or production based on NODE_ENV
-  #   restart: unless-stopped
-  #   volumes:
-  #     - .:/app
-  #     - /app/node_modules
-  #   ports:
-  #     - "3000:3000"
-  #   depends_on:
-  #     - postgres
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     DATABASE_URL: postgres://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:5432/${DATABASE_NAME}
-  #     NODE_ENV: ${NODE_ENV:-development}
-  #     JWT_SECRET: ${JWT_SECRET}
-  #   command: npm start
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: ${NODE_ENV:-development} # Build for development or production based on NODE_ENV
+    restart: unless-stopped
+    volumes:
+      - .:/app
+      - /app/node_modules
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    env_file:
+      - .env
+    environment:
+      DATABASE_URL: postgres://${DATABASE_USER}:${DATABASE_PASSWORD}@postgres:5433/${DATABASE_NAME}
+      NODE_ENV: ${NODE_ENV:-development}
+    command: npm start
 
 volumes:
   postgres_data:
